force-app/main/default/objects/Contract_Additional_Parties__c/Contract_Additional_Parties__c.object-meta.xml
<CustomObject>
    <description>Used for Contract Management. Allows users to specify additional companies related to the Contract.</description>
    <label>Contract Additional Parties</label>
    <nameField>
        <displayFormat>CAP-{0000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Additional Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>