force-app/main/default/objects/Contract_Additional_Parties__c/fields/Additional_Company__c.field-meta.xml
<CustomField>
    <fullName>Additional_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Additional Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Additional Parties</relationshipLabel>
    <relationshipName>Contract_Additional_Parties</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>