force-app/main/default/objects/Contract_Additional_Parties__c/fields/Contract_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category_1__c</fullName>
    <formula>TEXT(Contract__r.Contract_Category_1__c)</formula>
    <label>Contract Category 1</label>
    <type>Text</type>
</CustomField>