force-app/main/default/objects/Contract_Additional_Parties__c/fields/Contract_Category_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category_2__c</fullName>
    <formula>TEXT(Contract__r.Contract_Category_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Category 2</label>
    <type>Text</type>
</CustomField>