force-app/main/default/objects/Contract_Additional_Parties__c/fields/Contract_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Record_Type__c</fullName>
    <formula>Contract__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Record Type</label>
    <type>Text</type>
</CustomField>