force-app/main/default/objects/Contract_Additional_Parties__c/fields/Import_ID__c.field-meta.xml
<CustomField>
    <fullName>Import_ID__c</fullName>
    <externalId>true</externalId>
    <label>Import ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>