force-app/main/default/objects/Contract_Additional_Parties__c/fields/Party_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Party_Effective_Date__c</fullName>
    <label>Party Effective Date</label>
    <type>Date</type>
</CustomField>