force-app/main/default/objects/Contract_Additional_Parties__c/fields/Party_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Party_Expiration_Date__c</fullName>
    <label>Party Expiration Date</label>
    <type>Date</type>
</CustomField>