force-app/main/default/objects/Contract_Additional_Parties__c/fields/Party_Relation_Description__c.field-meta.xml
<CustomField>
    <fullName>Party_Relation_Description__c</fullName>
    <label>Party Relation Description</label>
    <type>TextArea</type>
</CustomField>