force-app/main/default/objects/Contract_Additional_Parties__c/fields/Party_Relation_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Relation_Type__c</fullName>
    <label>Party Relation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Addl Signing Party to Contract</fullName>
            </value>
            <value>
                <fullName>Named Party to Contract</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Counterparty</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Business Unit/Segment</fullName>
            </value>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>