force-app/main/default/objects/Contract_Additional_Parties__c/fields/Search_Term_2__c.field-meta.xml
<CustomField>
    <fullName>Search_Term_2__c</fullName>
    <label>Search Term 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>