force-app/main/default/objects/Contract_Additional_Parties__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IMAGE( 
CASE(  Relationship_Status__c , 
&quot;Active&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Inactive&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/img/samples/flag_green.gif&quot;), 
&quot;Status Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>